# sic-soc-llm

./: .gcloudignore  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.yaml  cloud_deploy.sh  codecov.yml  index.html  listings.json  method.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: CodeCov.yml  QuartoDocs.yml
app/: Welcome.py
app/pages/: 1_SIC_&_SOC_pre-defined_coding_assistant.py  2_Setup_custom_coding_assistant.py  3_Test_custom_coding_assistant.py
docs/: _quarto.yml  index.qmd  method.qmd
docs/tutorials/: 1_sic_data_structure.qmd  2_sic_classifier.qmd  3_soc_classifier.qmd  4_custom_coicop_classifier.qmd  index.qmd
reference/: RagCandidate.html  RagResponse.html  SIC.html  SicCandidate.html  SicCode.html  SicNode.html  SicResponse.html  SocCandidate.html  SocResponse.html  check_file_exists.html  embedding.EmbeddingHandler.html  get_config.html  index.html  llm.ClassificationLLM.html  prompt.PromptTemplates.html  setup_logging.html  sicDB.SicMeta.html  sic_meta_model.ClassificationMeta.html
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/sic_soc_llm/: __init__.py  embedding.py  llm.py  logs.py  prompt.py
src/sic_soc_llm/_config/: main.py  sic_soc_llm_config.toml
src/sic_soc_llm/data_models/: response_model.py  sicDB.py  sic_data_access.py  sic_hierarchy.py  sic_meta_model.py
src/sic_soc_llm/example_data/: coicop_5d_condensed.txt  sic_2d_condensed.txt  sic_4d_condensed.txt  soc_4d_condensed.txt  toy_index.txt
tests/: test_classification_llm.py  test_embedding.py  test_sic_data_structure.py
tutorials/: 1_sic_data_structure.html  2_sic_classifier.html  3_soc_classifier.html  4_custom_coicop_classifier.html  index.html
